feat: offline V2, PWA, wallpaper, receitas e ajustes

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,8 @@
 # Supabase: https://supabase.com/dashboard → Seu projeto → Settings → API
 
 NEXT_PUBLIC_SUPABASE_URL=https://SEU-PROJECT-ID.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=sua-anon-key-aqui
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sua-anon-key
+
+# Para npm run seed:global (30 treinos + 20 receitas). Settings → API → service_role (NUNCA commitar)
+# SUPABASE_URL=https://SEU-PROJECT-ID.supabase.co
+# SUPABASE_SERVICE_ROLE_KEY=sua-service-role-key
