feat: preferências de jejum, erro recipes visível, assistente IA (SSE + ai_threads)

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=sua-anon-key
 # Para npm run seed:global (30 treinos + 20 receitas). Settings → API → service_role (NUNCA commitar)
 # SUPABASE_URL=https://SEU-PROJECT-ID.supabase.co
 # SUPABASE_SERVICE_ROLE_KEY=sua-service-role-key
+
+# Assistente IA (opcional). OpenAI Dashboard → API keys + Assistants
+# OPENAI_API_KEY=sk-...
+# OPENAI_ASSISTANT_ID=asst_...
