--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.47.0",
     "@tanstack/react-query": "^5.90.20",
     "clsx": "^2.1.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
+    "openai": "^6.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.1",
